2008-08-02  Keith Seitz  <keiths@redhat.com>

	* acinclude.m4: Include ../config/tcl.m4 to pick up
	standard Tcl configury bits.
	Remove all Tcl, Tk, Itcl, Itk, etc definitions.
	* configure.ac: Don't check if ../itcl exists when building
	gdbtk. It could be installed.
	Rewrite gdbtk configury to allow for using system-supplied
	Tcl and Tk. Gdbtk no longer requires build-time access to 
	itcl and itk.
	* Makefile.in: Remove everything related to itcl and itk.
	Rewrite the Tcl bits for gdbtk to correspond to rewrite of
	configure.ac.
	Remove v850ice.o build rule.
	(ALL_TCL_CFLAGS): New convenience defintion. Change all
	gdbtk sources to use it.
	* configure: Regenerate.
	
2008-07-31  Stan Shebs  <stan@codesourcery.com>

	* coffread.c (coff_symtab_read): Remove FUNCTION_EPILOGUE_SIZE.

2008-07-30  Stan Shebs  <stan@codesourcery.com>

	* objfiles.c (TARGET_KEEP_SECTION): Remove.
	(add_to_objfile_sections): Remove use.

2008-07-29  Tom Tromey  <tromey@redhat.com>

	* cli/cli-decode.c (lookup_cmd_1): Use memcpy.
	(lookup_cmd_composition): Likewise.

2008-07-29  Tom Tromey  <tromey@redhat.com>

	* cli/cli-cmds.c (edit_command): Remove unused variables.  Delete
	dead code.  Fix indentation.

2008-07-29  Stan Shebs  <stan@codesourcery.com>

	* main.c (captured_main): Remove long-unused #if 0 blocks.

2008-07-28  Tom Tromey  <tromey@redhat.com>

	* annotate.h (deprecated_annotate_starting_hook): Remove.
	(deprecated_annotate_stopped_hook): Remove.
	(deprecated_annotate_exited_hook): Remove.
	* Makefile.in (annotate.o): Depend on observer_h.
	* top.c (deprecated_delete_breakpoint_hook): Remove.
	(deprecated_create_breakpoint_hook): Likewise.
	(deprecated_modify_breakpoint_hook): Likewise.
	* interps.c (clear_interpreter_hooks): Update for removed hooks.
	* breakpoint.c (mention): Don't call removed hook.
	(delete_breakpoint): Likewise.
	(disable_breakpoint): Likewise.
	(do_enable_breakpoint): Likewise.
	* annotate.c: Include observer.h.